--- a/templates/includes/sidebar/modules/payments_backup.html
+++ b/templates/includes/sidebar/modules/payments_backup.html
@@ -6,8 +6,6 @@
         <span class="nav-text">Payments</span>
     </a>
     <ul class="nav-submenu">
-        <!-- Dashboard and Quick Actions -->
-         {% if user_role in 'owner,manager,supervisor' %}
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'dashboard' and 'payments' in request.resolver_match.namespace %}active{% endif %}" 
                href="/business/{{ request.tenant.slug }}/payments/">
@@ -32,8 +30,27 @@
                 <span class="nav-badge nav-badge-primary">QUICK</span>
             </a>
         </li>
-        {% endif %}
         
+        <!-- Quick Actions for Attendants -->
+        {% if user_role == 'attendant' %}
+        <li class="nav-divider">
+            <span class="nav-divider-text">Quick Actions</span>
+        </li>
+        
+        <li class="nav-item">
+            <a class="nav-link nav-link-action" href="#" onclick="openPaymentQuickProcess()">
+                <i class="nav-icon fas fa-cash-register"></i>
+                <span class="nav-text">Quick Payment</span>
+            </a>
+        </li>
+        
+        <li class="nav-item">
+            <a class="nav-link nav-link-action" href="#" onclick="openReceiptPrint()">
+                <i class="nav-icon fas fa-print"></i>
+                <span class="nav-text">Print Receipt</span>
+            </a>
+        </li>
+        {% endif %}
         
         <!-- Management Features -->
         {% if user_role in 'owner,manager,supervisor' %}
