--- a/templates/customers/customer_list.html
+++ b/templates/customers/customer_list.html
@@ -16,7 +16,7 @@
     
     <div class="page-actions">
         {% if user_role in 'owner,manager,supervisor,attendant' %}
-        <a href="/business/{{ request.business.slug }}/customers/create/" class="btn btn-primary">
+        <a href="/business/{{ request.business.slug }}/customers/add/" class="btn btn-primary">
             <i class="fas fa-plus"></i>
             Add Customer
         </a>
@@ -287,11 +287,11 @@
                                         </a></li>
                                         {% endif %}
                                         
-                                        <li><a class="dropdown-item" href="/business/{{ request.business.slug }}/customers/{{ customer.pk }}/vehicles/create/">
+                                        <li><a class="dropdown-item" href="/business/{{ request.business.slug }}/customers/{{ customer.pk }}/vehicles/add/">
                                             <i class="fas fa-plus"></i> Add Vehicle
                                         </a></li>
                                         
-                                        <li><a class="dropdown-item" href="/business/{{ request.business.slug }}/services/orders/create/?customer={{ customer.pk }}">
+                                        <li><a class="dropdown-item" href="/business/{{ request.business.slug }}/services/orders/quick/?customer={{ customer.pk }}">
                                             <i class="fas fa-plus-circle"></i> Create Order
                                         </a></li>
                                         
@@ -364,7 +364,7 @@
             <h5>No Customers Found</h5>
             <p>{% if search_form.search.value %}No customers match your search criteria.{% else %}You haven't added any customers yet.{% endif %}</p>
             {% if user_role in 'owner,manager,supervisor,attendant' %}
-            <a href="/business/{{ request.business.slug }}/customers/create/" class="btn btn-primary">
+            <a href="/business/{{ request.business.slug }}/customers/add/" class="btn btn-primary">
                 <i class="fas fa-plus"></i>
                 Add Your First Customer
             </a>
