--- a/templates/includes/sidebar/modules/customers.html
+++ b/templates/includes/sidebar/modules/customers.html
@@ -17,7 +17,7 @@
         {% if user_role in 'owner,manager,supervisor' %}
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'create' and 'customers' in request.resolver_match.namespace %}active{% endif %}" 
-               href="/business/{{ request.tenant.slug }}/customers/create/">
+               href="/business/{{ request.tenant.slug }}/services/quick/customer-register/">
                 <i class="nav-icon fas fa-user-plus"></i>
                 <span class="nav-text">Add Customer</span>
             </a>
@@ -44,16 +44,18 @@
         <li class="nav-divider">
             <span class="nav-divider-text">Quick Actions</span>
         </li>
-        
+        <!-- Navigate to quick Customer Create-->
         <li class="nav-item">
-            <a class="nav-link nav-link-action" href="#" onclick="openCustomerSearch()">
+            <a class="nav-link nav-link-action {% if request.resolver_match.url_name == 'quick_customer_search' %}active{% endif %}" 
+               href="/business/{{ request.tenant.slug }}/services/quick/customer-register/">
                 <i class="nav-icon fas fa-search"></i>
-                <span class="nav-text">Find Customer</span>
+                <span class="nav-text">Quick Search</span>
             </a>
         </li>
-        
+
+           
         <li class="nav-item">
-            <a class="nav-link nav-link-action" href="#" onclick="openVehicleSearch()">
+            <a class="nav-link nav-link-action" href="#">
                 <i class="nav-icon fas fa-car"></i>
                 <span class="nav-text">Find Vehicle</span>
             </a>
