--- a/templates/includes/sidebar/modules/employees.html
+++ b/templates/includes/sidebar/modules/employees.html
@@ -3,14 +3,14 @@
     <a class="nav-link nav-dropdown-toggle {% if 'employees' in request.resolver_match.namespace %}active{% endif %}" 
        href="#" onclick="toggleDropdown('employees-dropdown')">
         <i class="nav-icon fas fa-users-cog"></i>
-        <span class="nav-text">Team</span>
+        <span class="nav-text">Employees</span>
     </a>
     <ul class="nav-submenu">
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'dashboard' and 'employees' in request.resolver_match.namespace %}active{% endif %}" 
                href="/business/{{ request.tenant.slug }}/employees/">
                 <i class="nav-icon fas fa-tachometer-alt"></i>
-                <span class="nav-text">Team Dashboard</span>
+                <span class="nav-text">Dashboard</span>
             </a>
         </li>
         <li class="nav-item">
