--- a/templates/payments/dashboard.html
+++ b/templates/payments/dashboard.html
@@ -19,7 +19,7 @@
                     <p class="text-muted mb-0">Monitor and manage all payment transactions</p>
                 </div>
                 <div class="col-md-4 text-md-end">
-                    <a href="{% url 'payments:create' %}" class="btn btn-primary">
+                    <a href="{% url 'payments:process' %}" class="btn btn-primary">
                         <i class="fas fa-plus me-2"></i>New Payment
                     </a>
                 </div>
@@ -257,7 +257,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-3 mb-3">
-                        <a href="{% url 'payments:create' %}" class="quick-action text-decoration-none">
+                        <a href="{% url 'payments:process' %}" class="quick-action text-decoration-none">
                             <div class="text-center">
                                 <i class="fas fa-plus fa-2x text-primary mb-2"></i>
                                 <h6>New Payment</h6>
@@ -329,7 +329,7 @@
 $(document).ready(function() {
     // Auto-refresh payment data every 30 seconds
     setInterval(function() {
-        $.get('{% url "payments:summary_ajax" %}', function(data) {
+        $.get('{% url "payments:payment_summary" %}', function(data) {
             // Update today's statistics (you can implement this)
             console.log('Payment data refreshed');
         });
