--- a/templates/services/order_detail.html
+++ b/templates/services/order_detail.html
@@ -938,14 +938,14 @@
                     {% endif %}
                     
                     {% if order.status == 'completed' and order.payment_status != 'paid' %}
-                        <a href="/business/{{ request.tenant.slug }}/payments/create/{{ order.id }}/" class="btn btn-success">
+                        <a href="/business/{{ request.tenant.slug }}/payments/process/{{ order.id }}/" class="btn btn-success">
                             <i class="fas fa-credit-card"></i>
                             Process Payment
                         </a>
                     {% endif %}
                     
-                    {% if order.status == 'completed' and order.payment_status == 'paid' %}
-                        <a href="/business/{{ request.tenant.slug }}/services/orders/{{ order.id }}/receipt/" class="btn btn-outline-primary">
+                    {% if order.status == 'completed' and order.payment_status == 'paid' and payment_id %}
+                        <a href="/business/{{ request.tenant.slug }}/payments/{{ payment_id }}/receipt/" class="btn btn-outline-primary">
                             <i class="fas fa-receipt"></i>
                             View Receipt
                         </a>
