--- a/templates/services/order_list.html
+++ b/templates/services/order_list.html
@@ -15,12 +15,6 @@
     </div>
     
     <div class="page-actions">
-        {% if user_role in 'owner,manager,supervisor' %}
-        <a href="/business/{{ request.tenant.slug }}/services/orders/create/" class="btn btn-primary">
-            <i class="fas fa-plus"></i>
-            Create Order
-        </a>
-        {% endif %}
         <a href="/business/{{ request.tenant.slug }}/services/orders/quick/" class="btn btn-success">
             <i class="fas fa-bolt"></i>
             Quick Order
@@ -305,7 +299,7 @@
                                         
                                         {% if order.payment_status != 'paid' %}
                                         <li><hr class="dropdown-divider"></li>
-                                        <li><a class="dropdown-item text-warning" href="/business/{{ request.tenant.slug }}/payments/create/{{ order.id }}/">
+                                        <li><a class="dropdown-item text-warning" href="/business/{{ request.tenant.slug }}/payments/process/{{ order.id }}/">
                                             <i class="fas fa-credit-card"></i> Process Payment
                                         </a></li>
                                         {% endif %}
