Updated Payemnt Detail Print Payment Receipt to use payment ID

--- a/templates/payments/payment_detail.html
+++ b/templates/payments/payment_detail.html
@@ -825,7 +825,7 @@
 {% block extra_js %}
 <script>
 function printReceipt() {
-    const printUrl = `/business/{{ request.tenant.slug }}/services/orders/{{ payment.service_order.id }}/receipt/?print=true`;
+    const printUrl = `/business/{{ request.tenant.slug }}/payments/{{ payment.payment_id }}/receipt/?print=true`;
     window.open(printUrl, '_blank');
 }
 
