Added More template permission check and edited redirect urls for services

--- a/templates/includes/sidebar/modules/services.html
+++ b/templates/includes/sidebar/modules/services.html
@@ -91,7 +91,7 @@
                 <span class="nav-badge nav-badge-primary">FAST</span>
             </a>
         </li>
-        
+        {% if user_role in 'owner,manager' %}
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'queue' %}active{% endif %}" 
                href="/business/{{ request.tenant.slug }}/services/queue/">
@@ -102,6 +102,7 @@
                 {% endif %}
             </a>
         </li>
+        {% endif %}
         
         <!-- Quick Actions for Attendants -->
         {% if user_role == 'attendant' %}
