--- a/templates/payments/receipt.html
+++ b/templates/payments/receipt.html
@@ -531,9 +531,11 @@
     </a>
     {% endif %}
     {% endif %}
+    {% if user_role in 'owner,manager' %}
     <a href="/business/{{ request.tenant.slug }}/payments/" class="btn btn-outline-secondary btn-receipt">
         <i class="fas fa-list"></i> All Payments
     </a>
+    {% endif %}
 </div>
 {% endblock %}
 
