--- a/templates/services/order_detail.html
+++ b/templates/services/order_detail.html
@@ -956,10 +956,14 @@
                         Print Order
                     </a>
                     
-                    <a href="/business/{{ request.tenant.slug }}/services/orders/{{ order.pk }}/edit/" class="btn btn-outline-primary">
-                        <i class="fas fa-edit"></i>
-                        Edit Order
-                    </a>
+                    <!-- Check if order can be Edited -->
+                    {% if order.status == 'pending' or order.status == 'confirmed' %}
+                        <a href="/business/{{ request.tenant.slug }}/services/orders/{{ order.pk }}/edit/" class="btn btn-outline-primary">
+                            <i class="fas fa-edit"></i>
+                            Edit Order  
+                        </a>
+                    {% endif %}
+                 
                 </div>
             </div>
         </div>
